k8s/dev-ops/ingress-dev-ops.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    #nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - secretName: dev-ops-tls
      hosts:
        - '*.dev-ops'
  rules:
   - host: jenkins.dev-ops
     http:
      paths:
        - path: /(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: jenkins-service
              port:
                number: 8080
   - host: nexus.dev-ops
     http:
      paths:
        - path: /(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: nexus-service
              port:
                number: 8081
